--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -1,24 +1,26 @@
 .greeting-container {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-
+  height: 100vh;
 }
 header {
+  display: flex !important;
+  justify-content: flex-end;
+  align-items: center;
   width: 100%;
   background-color: #0060bf;
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05) !important;
   height: 114px;
-  display: flex;
-  align-content: center;
 }
 .greeting-buttons{
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 100;
   color: white;
   background-color: inherit;
-  text-align: center;
   padding: 5px;
+  margin: 5px;
   border-radius: 4px;
-  align-self: flex-end;
 }
 
 .greeting-blue {
