--- a/app/assets/stylesheets/api/auth.scss
+++ b/app/assets/stylesheets/api/auth.scss
@@ -49,7 +49,7 @@
 .signup-form, .login-form {
   width: 100%;
 }
-.signup-input, .login-input {
+.signup-input, .login-input{
   height: 26px;
   padding: 10px;
   border: 1px solid #aaa;
@@ -72,4 +72,26 @@
   border-radius: 4px;
   color: white;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+.demo-login {
+  background-color: #009dff;
+  text-align: center;
+  font-size: 24px;
+  width: 380px;
+  height: 28px;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 4px;
+  color: white;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+// .or {
+//   width:
+//   font-family: "Comic Sans MS", "Comic Sans", cursive;
+//   text-decoration: line-through;
+// }
+.errors li {
+  font-size: 16px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+
 }
