--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -48,7 +48,7 @@ header {
 .greeting-blue h1 {
   color: white;
   text-align: center;
-  font-size: 36px;
+  font-size: 42px;
   padding: 10px;
-  margin: 30px;
+  margin: 30px auto;
 }
