--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,7 +1,7 @@
-.lists-index{
+.lists-index {
   margin: 0 11px;
-  font-family: arial;
-  font-size: 14px;
+  font-family: sans-serif;
+  font-size: 13px;
   border-bottom: 1px solid #bfd9f1;
   padding: 10px 0;
 }
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 .list-index-item:hover {
   background-color: #bfd7ef;
