--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,11 +1,10 @@
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  background-color: #d7e7f5;
+  background-color: #e4eef8;
   width: 200px;
   height: 100vh;
   align-content: space-between;
-  border-right: 1px solid black; //to be removed
 }
 .logo {
   align-self: center;
