--- a/app/assets/stylesheets/main_page.scss
+++ b/app/assets/stylesheets/main_page.scss
@@ -1,3 +1,8 @@
 .main-page {
   background-color: #e4eef8;
 }
+.main-container {
+  background-color: #e4eef8;
+  display: flex;
+  flex-direction: row;
+}
