--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -94,6 +94,8 @@
   color: white;
 }
 .settings-dropdown {
+  font-family: sans-serif;
+  font-size: 13px;
   display: block;
   position: fixed;
   right: 10px;
