fixed coloring of lists links

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: black;
 }
 .list-index-item:hover {
   background-color: #bfd7ef;
