--- a/app/assets/stylesheets/tasks_index.scss
+++ b/app/assets/stylesheets/tasks_index.scss
@@ -8,8 +8,8 @@
 .task {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px dotted #999;
-  border-left: 3px solid #ccc;
+  border-bottom: 1px dotted #e5e5e5;
+  border-left: 3px solid #cccccc;
   padding: 5px 0;
   margin: 2px 0;
   align-items: center;
@@ -17,7 +17,7 @@
   color: black;
 }
 .task:hover {
-  background-color: #fffac0;
+  background-color: #ffc;
 }
 .tasks-index {
   display: flex;
@@ -38,7 +38,7 @@
   font-size: 14px;
   margin-bottom: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px dotted grey;
+  border-bottom: 1px dotted #e5e5e5;
 }
 .tasks-choice span {
   height: 26px;
@@ -47,14 +47,14 @@
 }
 .add-task {
   flex-direction: column;
-  border-bottom: 1px dotted grey;
+  border-bottom: 1px dotted #e5e5e5;
 }
 .add-task-input {
   height: 18px;
   width: -webkit-fill-available;
   padding: 6px 7px;
   margin-bottom: 10px;
-  border: 1px solid #999;
+  border: 1px solid #d0d3d6;
   border-radius: 3px;
   color: #999;
   font-weight: normal;
