--- a/app/assets/stylesheets/task_detail.scss
+++ b/app/assets/stylesheets/task_detail.scss
@@ -6,7 +6,7 @@
   color: black;
   font-size: 14px;
   border-radius: 6px;
-  min-width: 50%;
+  width: 50%;
   margin-top: 10px;
   padding: 23px 17px 0;
   text-align: left;
