--- a/app/assets/stylesheets/main_page.scss
+++ b/app/assets/stylesheets/main_page.scss
@@ -1,8 +1,14 @@
 .main-page {
   background-color: #e4eef8;
+  height: 100vh;
 }
 .main-container {
   background-color: #e4eef8;
   display: flex;
   flex-direction: row;
+}
+.secondary-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
