add task-detail border

--- a/app/assets/stylesheets/task_detail.scss
+++ b/app/assets/stylesheets/task_detail.scss
@@ -10,6 +10,7 @@
   margin-top: 10px;
   padding: 23px 17px 0;
   text-align: left;
+  border-left: 2px solid #cccccc;
 }
 .close {
   align-self: flex-end;
