list summary in sidebar

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -112,3 +112,12 @@
 .close-button:hover {
   color: darkgrey;
 }
+.num-tasks {
+  font-size: 11px !important;
+  color: black;
+  border-radius: 3px;
+  position: absolute;
+  left: 157px;
+  padding: 1px 3px;
+  background-color: #c8dcf1;
+}
