--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -60,8 +60,8 @@
   border-radius: 5px;
   border: 1px solid #d0d3d6;
   padding: 29px 37px;
-  margin: auto;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+  margin: 175px auto;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   font-family: sans-serif;
 }
 .list-form h1,.list-edit-form h1 {
