--- a/app/assets/stylesheets/task_detail.scss
+++ b/app/assets/stylesheets/task_detail.scss
@@ -16,6 +16,7 @@
   align-self: flex-end;
   color: #808080;
   font-size: 14px;
+  cursor: pointer;
 }
 .task-detail-container form {
   display: flex;
