--- a/app/assets/stylesheets/main_page.scss
+++ b/app/assets/stylesheets/main_page.scss
@@ -1,9 +1,9 @@
 .main-page {
-  background-color: #e4eef8;
+  background-color: #d7e7f5;
   height: 100vh;
 }
 .main-container {
-  background-color: #e4eef8;
+  background-color: #d7e7f5;
   display: flex;
   flex-direction: row;
 }
