--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  background-color: #e4eef8;
+  background-color: #d7e7f5;
   min-width: 200px;
   height: 100vh;
   align-content: space-between;
