--- a/app/assets/stylesheets/list_summary.scss
+++ b/app/assets/stylesheets/list_summary.scss
@@ -14,6 +14,7 @@
   text-transform: capitalize;
   font-size: 18px;
   margin-bottom: 20px;
+  margin-left: 7px;
 }
 .summary-items {
   display: flex;
