--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -11,6 +11,11 @@
   max-width: 153px;
   min-width: 151px;
   height: 71px;
-  border: 1px solid black; //to be removed
   margin-top: 10px;
+  font-family: 'Rock Salt';
+  font-size: 37px;
+  color: #0060bf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
