--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -103,16 +103,17 @@
   background: white;
   border-radius: 3px;
   width: 200px;
-  padding: 10px;
   box-shadow: 0 1px 4px 1px rgba(0,0,0,0.2);
-
+  z-index: 1000;
 }
 .user {
   display: flex;
   flex-direction: row;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
+  padding: 10px;
   border-bottom: 1px solid rgb(235, 235, 235);
+}
+.user:hover {
+  background-color: #bfd7ef;
 }
 .user-info {
   flex-direction: column;
@@ -133,7 +134,7 @@
 }
 .signout {
   cursor: pointer;
-  padding: 5px;
+  padding: 10px;
 }
 .signout:hover {
   background-color: #bfd7ef;
