worked on fixing lists dropdown

--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -6,13 +6,13 @@
 }
 .lists-dropdown {
   position: relative;
-  left: 49px;
-  top: 226px;
+  left: 50px;
+  top: 499px;
   border-radius: 3px;
   width: 107px;
   background-color: white;
   line-height: 1.6;
-  box-shadow: 0 1px 4px 1px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
 .lists-dropdown p{
