fixed dropdown issue

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -54,6 +54,8 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
+  left: 0;
+  bottom: 0;
   z-index: 999;
 }
 .list-form, .list-edit-form {
