--- a/app/assets/stylesheets/main_page.scss
+++ b/app/assets/stylesheets/main_page.scss
@@ -6,6 +6,7 @@
   background-color: #d7e7f5;
   display: flex;
   flex-direction: row;
+  min-height: 100vh;
 }
 .secondary-container {
   display: flex;
