favicon created, but not working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tasks</title>
+    <title>ZTasks</title>
     <%= csrf_meta_tags %>
+    <link rel="icon" type="image/ico" href="../../assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Rock+Salt"
       rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
