--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>ZTasks</title>
     <%= csrf_meta_tags %>
-    <link rel="icon" type="image/ico" href="../../assets/images/favicon.ico">
+    <link rel="icon" type="image/ico" href=".~/app/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Rock+Salt"
       rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
