favicon added and fix for list dropdown

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,11 @@
   <head>
     <title>ZTasks</title>
     <%= csrf_meta_tags %>
-    <link rel="icon" type="image/ico" href=".~/app/assets/images/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Rock+Salt"
       rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
   <body>
