--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -1,9 +1,3 @@
-.hidden {
-  display: none;
-}
-.view {
-  display: block;
-}
 .lists-dropdown {
   position: relative;
   left: 66px;
@@ -23,4 +17,8 @@
 }
 .lists-dropdown p:hover {
   background-color: #bfd7ef;
+}
+.list-menu {
+  display: none;
+  position: absolute;
 }
